<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to_budgetwise"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginBottom="32dp"/>

    <Button
        android:id="@+id/btnAddCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Add_category"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/btnAddExpense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Add_expense"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/btnViewExpenses"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/View_expenses"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/btnSetGoals"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/set_monthly_goals"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/btnSummary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/View_summary"
        android:layout_marginBottom="16dp"/>
    <Button
        android:id="@+id/btnViewPhoto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/View_photo"
        android:layout_marginBottom="16dp"/>

</LinearLayout>
