<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_summary"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginBottom="32dp"/>

    <TextView
        android:id="@+id/tvTotalSpent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_spent_r0"
        android:textSize="18sp"
        android:layout_marginBottom="16dp"/>

    <TextView
        android:id="@+id/tvTotalIncome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_income_r0"
        android:textSize="18sp"
        android:layout_marginBottom="16dp"/>

    <TextView
        android:id="@+id/tvCategorySummary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/category_summary"
        android:textSize="18sp"
        android:layout_marginBottom="16dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvCategorySummary"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:contentDescription="@string/category_summary_list_for_budget_overview" />


    <Button
        android:id="@+id/btnCloseSummary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Close"
        android:layout_marginTop="24dp"/>
</LinearLayout>
