<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Set_monthly_goals"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginBottom="32dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/minimum_monthly_goal"
        android:textSize="18sp"
        android:layout_marginBottom="8dp"/>

    <SeekBar
        android:id="@+id/seekBarMinGoal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="20"
        android:progress="0"
        android:layout_marginBottom="16dp"/>

    <TextView
        android:id="@+id/tvMinGoalValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0"
        android:textSize="16sp"
        android:layout_marginBottom="32dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/maximum_monthly_goal"
        android:textSize="18sp"
        android:layout_marginBottom="8dp"/>

    <SeekBar
        android:id="@+id/seekBarMaxGoal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="20"
        android:progress="0"
        android:layout_marginBottom="16dp"/>

    <TextView
        android:id="@+id/tvMaxGoalValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_o"
        android:textSize="16sp"
        android:layout_marginBottom="32dp"/>

    <Button
        android:id="@+id/btnSaveGoals"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_goals"
        android:layout_marginTop="24dp"/>
</LinearLayout>
